Fixing fade-in transitions on navlinks. Changing visibility

--- a/src/Home/home.scss
+++ b/src/Home/home.scss
@@ -41,6 +41,7 @@ h2{
 
     @keyframes fadein{
         from{
+            visibility: hidden;
             opacity: 0%;
         }
         50%{
